增加sim中缺失的字段，由于成都的7010设备均不能测试sim，请台北测试一下sim卡的service state是否正常

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -95,6 +95,8 @@
     <string name="sys_open_license">Open Source License</string>
     <string name="net_conn">Connected</string>
     <string name="net_not_conn">Not Connect</string>
+    <string name="sim_info_in_service">In Service</string>
+    <string name="sim_info_out_service">Out of Service</string>
 
     <string name="driving_setting_range_horizon">Adjust the horizon line</string>
     <string name="driving_setting_range_hood">Adjust the hood line</string>
