--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="tv_system_settings_notification_sound_volume">報知音量</string>
     <string name="tv_system_settings_playback_volume">再生音量</string>
     <string name="tv_system_settings_preview">映像確認</string>
+    <string name="tv_system_settings_preview_back">映像確認（リアカメラ）</string>
     <string name="tv_system_settings_lcd_brightness">モニター明るさ</string>
     <string name="tv_system_settings_screen_power_saving">モニター画面節電設定</string>
     <string name="tv_system_settings_installation_tool">設置ツール</string>
