--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -154,7 +154,7 @@
     <string name="system_setting_monitor_time">モニター画面が節電に移行する時間を設定します</string>
     <string name="system_setting_monitor_operation">モニター画面の節電動作を設定します。節電を行わないときはOFFに設定します</string>
     <string name="system_setting_install_leveler">本機を設置するときに便利なツールです</string>
-    <string name="communication_emergency_notify">OFFに設定すると、事故が発生したときなどでもコールセンターに自動通報しません</string>
+    <string name="communication_emergency_notify">OFFに設定すると、衝撃を検知したときでもコールセンターに自動通報しません</string>
 
     <string name="driving_setting">運転支援機能設定</string>
     <string name="front_collision_warning">前方衝突アラート</string>
