--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -53,7 +53,7 @@
     <string name="sdcard_not_exist">SDカードがありません</string>
     <string name="sdcard_init_prompt">SDカードを初期化しますか？</string>
     <string name="sdcard_init_cancel">X</string>
-    <string name="sdcard_init_ok">OK</string>
+    <string name="sdcard_init_ok">はい</string>
     <string name="sdcard_init_ongoing">初期化中</string>
     <string name="sdcard_init_success">初期化しました</string>
     <string name="sdcard_init_fail">初期化に失敗しました</string>
