--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@
 
     <string name="driving_setting_range_horizon">地平線の位置に線を移動させ、決定ボタンを押してください</string>
     <string name="driving_setting_range_hood">ボンネット先端の位置に線を移動させ、決定ボタンを押してください</string>
-    <string name="driving_setting_range_center">走行車線の中心に線を移動させ、決定ボタンを押してください</string>
+    <string name="driving_setting_range_center">走行車線遠方の中心に線を移動させ、決定ボタンを押してください</string>
 
     <string name="installation_tool_leveler">水準器</string>
     <string name="installation_tool_satellite">衛星受信状態</string>
